# cnlse

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: MATLAB_PORT_MAP.md  PROJECT_PLAN.md  PUBLISHING.md
docs/tutorials/: 01_ook_100km_compensated.md  02_streamlit_app.md  README.md
examples/: ook_100km_compensated.py
legacy/: README.md
legacy/matlab/: Ampliflat.m  Avg_Power.m  Checkfields.m  Create_Field.m  Electricsource.m  Ex01.m  Fastexp.m  Fastshift.m  Fiber.m  Lasersource.m  Mz_Modulator.m  Nmod.m  Pattern.m  Phi2pow.m  Plotfield.m  Reset_All.m
src/cnlse/: __init__.py  app.py  constants.py  electric.py  examples.py  fiber.py  fields.py  laser.py  link.py  mathutils.py  modulators.py  patterns.py  plotting.py  power.py  pulses.py  state.py
tests/: test_app_simulation.py  test_fiber.py  test_mathutils.py  test_plotting.py  test_signal_chain.py  test_state_fields_power.py
