[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnlse"
version = "0.1.0"
description = "Fiber optics modulation simulations using NLSE/CNLSE and split-step Fourier methods."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ryan Maher Hamze", email = "contact@ryanhamze.com" }
]
keywords = [
  "fiber optics",
  "optical communications",
  "CNLSE",
  "NLSE",
  "SSFM",
  "MATLAB",
  "simulation"
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
app = [
  "streamlit>=1.36"
]

[project.urls]
Homepage = "https://ryanhamze.com"
Repository = "https://github.com/RyanHamze/cnlse"

[project.scripts]
cnlse-example = "cnlse.examples:main_example"
cnlse-app = "cnlse.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cnlse"]
